--- a/css/style.scss
+++ b/css/style.scss
@@ -283,10 +283,6 @@ button {
 	        backdrop-filter: blur(10px);
 	width: 100%;
 	z-index: 90;
-	-webkit-transform: translateY(100%);
-	        transform: translateY(100%);
-	-webkit-transition: transform 0.35s cubic-bezier(0.66, 0, 0.33, 1);
-	        transition: transform 0.35s cubic-bezier(0.66, 0, 0.33, 1);
 }
 
 .history-title-bar {
@@ -306,6 +302,7 @@ button {
 	color: $color-grey85;
 	background-color: transparent;
 	text-align: right;
+	font-size: 1.1em;
 	font-weight: 100;
 	width: 52px;
 	height: 52px;
@@ -344,11 +341,20 @@ button {
 	overflow: hidden;
 }
 
-.history--open {
-	.history-container {
-		-webkit-transform: translateY(0);
-		        transform: translateY(0);
-	}
+
+
+// Animations
+// ----------------------------------
+
+.slide-transition {
+	-webkit-transition: transform 0.35s cubic-bezier(0.66, 0, 0.33, 1);
+	        transition: transform 0.35s cubic-bezier(0.66, 0, 0.33, 1);
+}
+
+.slide-enter,
+.slide-leave {
+	-webkit-transform: translateY(100%);
+	        transform: translateY(100%);
 }
 
 
