#86 Added install screen

--- a/css/style.scss
+++ b/css/style.scss
@@ -325,12 +325,8 @@ button {
 
 
 
-// INSTALL SCREEN
-// ----------------------------------
-
-.installation {
-	display: none;
-}
+// ## Install Screen
+// -----------------------------------------------------------------------------
 
 .install {
 	background: #383838;
