--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,7 @@ button {
 }
 
 .keypad {
+  position: relative;
   display: flex;
   flex-flow: row wrap;
   font-size: 0;
@@ -165,6 +166,7 @@ button {
 .keypad-button.is-active {
   color: #099d93;
   border: 1.5px solid #000;
+  background-color: #2d2d2d;
 }
 
 .keypad-button--wide {
@@ -197,6 +199,19 @@ button {
 
 .keypad-button--clear {
   color: #ff0f0f;
+}
+
+.brackets-count {
+  color: #999;
+  background-color: #000;
+  font-size: 0.5em;
+  position: absolute;
+  bottom: 310px;
+  left: 50%;
+  padding: 2px 5px;
+  border-radius: 2px;
+  z-index: 80;
+  transform: translateX(-50%);
 }
 
 .history-container {
