--- a/css/style.scss
+++ b/css/style.scss
@@ -174,6 +174,7 @@ button {
 
 // Keypad buttons
 .keypad {
+	position: relative;
 	display: flex;
 	flex-flow: row wrap;
 	font-size: 0;
@@ -202,6 +203,7 @@ button {
 	&.is-active {
 		color: $color-primary;
 		border: 1.5px solid $color-grey0;
+		background-color: #2d2d2d;
 	}
 }
 
@@ -236,6 +238,19 @@ button {
 
 .keypad-button--clear {
 	color: $color-danger;
+}
+
+.brackets-count {
+	color: $color-grey60;
+	background-color: #000;
+	font-size: 0.5em;
+	position: absolute;
+	bottom: 310px;
+	left: 50%;
+	padding: 2px 5px;
+	border-radius: 2px;
+	z-index: 80;
+	transform: translateX(-50%);
 }
 
 
