Added Panel component

--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -32,6 +32,7 @@
 	font-weight: 300;
 	border: 1px solid #000;
 	width: 25%;
+	min-height: 71px;
 	transition: color 0.2s ease, background-color 0.2s ease;
 
 	@media (-webkit-min-device-pixel-ratio: 2) {
