--- a/src/components/keypad/index.scss
+++ b/src/components/keypad/index.scss
@@ -38,3 +38,21 @@
 		border-width: 1px;
 	}
 }
+
+.c-keypad__button {
+	font-size: 1.1rem;
+	border-radius: 0;
+	width: 25%;
+
+	&.c-button--destructive {
+		border-color: #000;
+	}
+
+	@media (-webkit-min-device-pixel-ratio: 2) {
+		border-width: 0.5px;
+	}
+}
+
+.c-keypad__button--half {
+	width: 50%;
+}
