--- a/src/app.scss
+++ b/src/app.scss
@@ -44,7 +44,15 @@ table {
 	border-spacing: 0;
 }
 
+html,
+body {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
 html {
+	position: fixed;
 	box-sizing: border-box;
 	color: #fff;
 	background-color: #000;
@@ -52,14 +60,13 @@ html {
 	font-size: 20px;
 	font-weight: 200;
 	line-height: 1.2;
-	height: 100%;
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 			user-select: none;
 }
 
 body {
-	min-height: 100%;
+	position: relative;
 }
 
 * {
