Removed custom keypad button component (#116)

--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -35,8 +35,7 @@
 	padding: 12px;
 
 	&:active {
-		color: #fff;
-		background-color: var(--color--primary);
+		background-color: #2d2d2d;
 	}
 
 	&:focus {
