Completely unmount panels when not open (#135)

--- a/src/components/panel/index.scss
+++ b/src/components/panel/index.scss
@@ -7,12 +7,16 @@
 	z-index: 90;
 	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.3);
 	transform: translateY(100%);
-	transition: transform 0.35s cubic-bezier(0.66, 0, 0.33, 1);
+	transform-origin: bottom center;
+	animation-name: slide-in-animation;
+	animation-fill-mode: forwards;
+	animation-duration: 0.35s;
+	animation-timing-function: cubic-bezier(0.66, 0, 0.33, 1);
 	-webkit-backdrop-filter: blur(10px);
 			backdrop-filter: blur(10px);
 
-	&.is-open {
-		transform: translateY(0);
+	&.is-closing {
+		animation-name: slide-out-animation;
 	}
 }
 
@@ -47,5 +51,23 @@
 @media (min-height: 668px) {
 	.c-panel {
 		height: 490px;
+	}
+}
+
+@keyframes slide-in-animation {
+	0% {
+		transform: translateY(100%);
+	}
+	100% {
+		transform: translateY(0);
+	}
+}
+
+@keyframes slide-out-animation {
+	0% {
+		transform: translateY(0);
+	}
+	100% {
+		transform: translateY(100%);
 	}
 }
