--- a/src/components/panel/index.scss
+++ b/src/components/panel/index.scss
@@ -26,8 +26,8 @@
 	justify-content: space-between;
 	color: #fff;
 	background-color: var(--color--primary);
-	font-size: 0.85em;
-	font-weight: 500;
+	font-size: 0.8rem;
+	font-weight: var(--font--weight--bold);
 	height: 45px;
 	padding-left: 24px;
 	box-shadow: 0 1px 6px rgba(0, 0, 0, 0.5);
