--- a/src/components/base-control/index.scss
+++ b/src/components/base-control/index.scss
@@ -34,7 +34,7 @@ select {
 	background-color: #262626;
 	font-size: 1rem;
 	border-radius: 4px;
-	border: 1px solid #dedede;
+	border: 1px solid #767676;
 	width: 100%;
 	padding: 0.6em;
 	-webkit-appearance: none;
