--- a/src/components/history/index.scss
+++ b/src/components/history/index.scss
@@ -17,7 +17,7 @@
 
 .c-history__equation {
 	color: #b3b3b3;
-	font-size: 0.7em;
+	font-size: 0.8rem;
 	line-height: 20px;
 	max-width: 100%;
 	padding: 3px 0 0 24px;
