--- a/src/components/keypad/index.scss
+++ b/src/components/keypad/index.scss
@@ -27,8 +27,8 @@
 	transform: translate(-50%, -50%);
 	color: #b3b3b3;
 	background-color: #333;
-	font-size: 0.8em;
-	font-weight: 400;
+	font-size: 0.8rem;
+	font-weight: var(--font--weight--bold);
 	text-align: center;
 	border: 2px solid #000;
 	border-radius: 8px;
