Added touch-action: manipulation to buttons

--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -16,6 +16,7 @@
 	cursor: pointer;
 	box-shadow: none;
 	overflow: hidden;
+	touch-action: manipulation;
 	-webkit-appearance: none;
 	   -moz-appearance: none;
 			appearance: none;
